// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HintsPreview  on second toggle click hides hints 1`] = `
<div>
  <div><span data-test="toggle" class="toggle"><span>Show 3 hints</span> <span class="icon"><i aria-hidden="true" class="v-icon material-icons theme--light">arrow_drop_up</i></span></span>
    <!---->
  </div>
</div>
`;

exports[`HintsPreview  on toggle click renders correct toggle label and displays hints 1`] = `
<div>
  <div><span data-test="toggle" class="toggle"><span>Hide hints</span> <span class="icon"><i aria-hidden="true" class="v-icon material-icons theme--light">arrow_drop_down</i></span></span>
    <div role="list" class="v-list theme--light">
      <div role="listitem">
        <div class="v-list__tile theme--light">
          <div class="flex xs1">
            1
          </div>
          <div class="flex xs2">
            Hint 1
          </div>
        </div>
      </div>
      <div role="listitem">
        <div class="v-list__tile theme--light">
          <div class="flex xs1">
            2
          </div>
          <div class="flex xs2">
            Hint 2
          </div>
        </div>
      </div>
      <div role="listitem">
        <div class="v-list__tile theme--light">
          <div class="flex xs1">
            3
          </div>
          <div class="flex xs2">
            Hint 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HintsPreview with more hints renders correct toggle label 1`] = `
<div>
  <div><span data-test="toggle" class="toggle"><span>Show 3 hints</span> <span class="icon"><i aria-hidden="true" class="v-icon material-icons theme--light">arrow_drop_up</i></span></span>
    <!---->
  </div>
</div>
`;

exports[`HintsPreview with no hints renders placeholder text only 1`] = `
<div>
  <div>
    No hints yet
  </div>
</div>
`;

exports[`HintsPreview with one hint renders correct toggle label 1`] = `
<div>
  <div><span data-test="toggle" class="toggle"><span>Show 1 hint</span> <span class="icon"><i aria-hidden="true" class="v-icon material-icons theme--light">arrow_drop_up</i></span></span>
    <!---->
  </div>
</div>
`;
